--- a/apps/trpc-client/src/index.css
+++ b/apps/trpc-client/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.wmde-markdown {
+    background-color: transparent!important;
+}
+
+.wmde-markdown h1 {
+    border: 0!important;
+}
